--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+html {
+    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
+            segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto,
+            noto, arial, sans-serif;
+}
