--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,12 +10,35 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require misc/normalize
  *= require_tree .
  *= require_self
  */
 
+@import "layout/responsive";
+
 html {
-    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
-            segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto,
-            noto, arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
+      segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto,
+      noto, arial, sans-serif;
+}
+
+body {
+  background-color: #0f4b32;
+  color: white;
+}
+
+body > main {
+  @include main-content-width;
+  background-color: #1c1c1c;
+  padding-top: 12px;
+  padding-bottom: 64px;
+}
+
+a:link, a:visited {
+  color: white;
+}
+
+a:hover {
+  color: #ffc107;
 }
