--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ body {
 }
 
 body > main {
-  @include main-content-width;
+  @include main-content-width(32px);
   background-color: #1c1c1c;
   padding-top: 12px;
   padding-bottom: 64px;
