--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -71,7 +71,7 @@ body > header {
     nav {
       height: 100%;
 
-      ul {
+      & > ul {
         display: flex;
         align-items: center;
         height: 100%;
@@ -80,12 +80,13 @@ body > header {
         margin: 0;
         padding: 0;
 
-        li {
+        list-style: none;
+
+        & > li {
           display: block;
           height: 100%;
-          list-style: none;
 
-          a, button {
+          & > a, & > button, & > form button {
             background: none;
             border: none;
 
@@ -100,7 +101,7 @@ body > header {
           }
 
           // login buttons are inside forms
-          form {
+          & > form {
             height: 100%;
           }
 
@@ -113,6 +114,49 @@ body > header {
               width: 48px;
               border-radius: 50%;
               margin: 0 auto 0.4em;
+            }
+
+            position: relative;
+            min-width: 120px;
+            max-width: 200px;
+
+            .username {
+              text-align: center;
+              text-overflow: ellipsis;
+              white-space: nowrap;
+              overflow: hidden;
+            }
+
+            &:hover .account-menu {
+              visibility: visible;
+            }
+
+            .account-menu {
+              visibility: hidden;
+              position: absolute;
+              top: calc(100% + 1px);
+              left: 0;
+              width: 100%;
+              background-color: #1a221f;
+
+              margin: 0;
+              padding: 0;
+
+              list-style: none;
+
+              li {
+                display: block;
+                width: 100%;
+
+                & > a, & > button {
+                  background: none;
+                  border: none;
+
+                  @include menu-item;
+
+                  padding: 12px 16px;
+                }
+              }
             }
           }
         }
