--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,11 +1,1 @@
-<h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb</p>
-
-<%= button_to "Sign in with Discord",
-    user_discord_omniauth_authorize_path,
-    data: { turbo: false } %>
-
-<%= button_to "Sign in with Developer",
-    user_developer_omniauth_authorize_path,
-    data: { turbo: false } \
-      if Rails.env.development? %>
+welcome :)
