--- a/app/assets/stylesheets/pages/mission.scss
+++ b/app/assets/stylesheets/pages/mission.scss
@@ -15,10 +15,12 @@
 
   .mission-title {
     display: block;
+    font-size: 1.1em;
   }
 
   .mission-start {
     display: block;
+    font-size: 0.9em;
   }
 }
 
