--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -1,5 +1,8 @@
 <h1><%= @mission.title %></h1>
 
+<%= link_to "Edit mission", edit_mission_path(@mission) %>
+<br /><br />
+
 <p>
   <%= @mission.description %>
 </p>
