--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -156,6 +156,10 @@ body > header {
 
                   padding: 12px 16px;
                 }
+
+                &.sign-out a {
+                  color: #f44336;
+                }
               }
             }
           }
