--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,12 @@
                 <% end %>
 
                 <ul class="account-menu">
+                  <% if current_user.admin? %>
+                    <li>
+                      <%= link_to "Admin", admin_permissions_index_path %>
+                    </li>
+                  <% end %>
+
                   <li class="sign-out">
                     <%= link_to "Sign out", sign_out_path, data: { turbo_method: :delete } %>
                   </li>
