add permissions 2: electric boogaloo

--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -121,6 +121,7 @@ body > header {
             max-width: 200px;
 
             .username {
+              font-weight: 600;
               text-align: center;
               text-overflow: ellipsis;
               white-space: nowrap;
