--- a/app/views/admin/permissions/index.html.erb
+++ b/app/views/admin/permissions/index.html.erb
@@ -5,7 +5,7 @@
   grant the permission.
 </p>
 
-<table class="permissions-matrix">
+<table class="permissions-matrix" data-controller="admin--permissions">
   <thead>
     <tr>
       <th>Permission</th>
@@ -35,6 +35,7 @@
                 <%= tag.input type: "checkbox",
                     checked: role.can?(permission),
                     data: {
+                      action: "admin--permissions#update",
                       role: role.id,
                       permission: permission,
                     } %>
