--- a/app/views/squads/_squad.html.erb
+++ b/app/views/squads/_squad.html.erb
@@ -7,7 +7,9 @@
     <% for slot in squad.slots %>
       <li class="slot">
         <div class="role"><%= slot.name %></div>
-        <div class="player"><%= slot.user&.display_name || "+" %></div>
+        <div class="player" style="color: #<%= slot.user&.color || "404040" %>">
+          <%= slot.user&.display_name || "empty" %>
+        </div>
       </li>
     <% end %>
   </ul>
