--- a/app/views/squads/_squad.html.erb
+++ b/app/views/squads/_squad.html.erb
@@ -4,14 +4,7 @@
   <strong class="name"><%= squad.name %></strong>
 
   <ul class="slots">
-    <% for slot in squad.slots %>
-      <li class="slot">
-        <div class="role"><%= slot.name %></div>
-        <div class="player" style="color: #<%= slot.user&.color || "404040" %>">
-          <%= slot.user&.display_name || "empty" %>
-        </div>
-      </li>
-    <% end %>
+    <%= render squad.slots %>
   </ul>
 
   <% case squad.children.count %>
