--- a/app/views/slots/_slot.html.erb
+++ b/app/views/slots/_slot.html.erb
@@ -2,7 +2,7 @@
   <div class="role" tabindex="0">
     <% if slot.name == "Squad Leader" %>
       <div class="actions">
-        <%= link_to "1", nil, class: "radio" %>
+        <%#= link_to "1", nil, class: "radio" %>
       </div>
     <% end %>
 
