--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -19,6 +19,7 @@
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    color: #ffc107
   }
 }
 
@@ -166,6 +167,30 @@ body > header {
           }
         }
       }
+    }
+  }
+}
+
+nav.secondary {
+  border-bottom: 1px solid rgba(white, 0.2);
+
+  display: flex;
+  flex-direction: row;
+  margin-top: -12px;
+
+  & > a {
+    display: block;
+    flex: 1;
+    max-width: 80px;
+    text-align: center;
+    padding: 14px;
+
+    text-decoration: none;
+
+    transition: all 0.05s ease-in-out;
+
+    &:hover {
+      background-color: rgba(white, 0.1);
     }
   }
 }
