--- a/app/views/admin/permissions/index.html.erb
+++ b/app/views/admin/permissions/index.html.erb
@@ -5,7 +5,7 @@
   grant the permission.
 </p>
 
-<table class="permissions-matrix" data-controller="admin--permissions">
+<table class="permissions-matrix">
   <thead>
     <tr>
       <th>Permission</th>
