--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
       </div>
     </header>
 
-    <main data-controller="<%= controller_path.gsub(/_/, "-").gsub(/\//, "--") %>">
+    <main>
       <%= yield %>
     </main>
 
