--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -1,3 +1,5 @@
+<p><%= link_to "<< Back to missions overview", missions_path %>
+
 <h1><%= @mission.title %></h1>
 
 <% if policy(@mission).edit? %>
