--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="controller-<%= controller_path.gsub(/_/, "-").gsub(/\//, "--") %>">
       <%= yield %>
     </main>
 
