--- a/app/views/modlists/diff.html.erb
+++ b/app/views/modlists/diff.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to "<< Back to modlists overview", modlists_path %>
+<p><%= link_to "<< Back to #{@modlist.title}", @modlist %>
 
 <h1><%= @other_modlist.title %> &rarr; <%= @modlist.title %></h1>
 
