--- a/app/assets/stylesheets/pages/modlists.scss
+++ b/app/assets/stylesheets/pages/modlists.scss
@@ -1,136 +1,143 @@
 @import "misc/remixicon";
 
-.modlist {
-  display: block;
-  text-decoration: none;
-  padding: 12px 24px;
-  background-color: #126341;
-  border: 1px solid rgba(white, 0.3);
-  border-radius: 4px;
-  margin-bottom: 12px;
-
-  transition: all 0.06s ease-in-out;
-
-  &:hover {
-    border-color: rgba(white, 0.8);
-  }
-
-  .modlist-title {
+.controller-modlists {
+  .modlist {
     display: block;
-    font-size: 1.1em;
-  }
-
-  .modlist-start {
-    display: block;
-    font-size: 0.9em;
-  }
-}
-
-.modlist-mods {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  column-gap: 24px;
-
-  .mod {
     text-decoration: none;
+    padding: 12px 24px;
+    background-color: #126341;
     border: 1px solid rgba(white, 0.3);
     border-radius: 4px;
     margin-bottom: 12px;
-    overflow: hidden;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    align-items: center;
+    transition: all 0.06s ease-in-out;
 
-    // repeat classname to take higher priority
-    &.deleted.deleted.deleted {
-      opacity: 0.2;
-
-      .actions {
-        justify-content: right;
-
-        :not(.restore) {
-          display: none;
-        }
-
-        .restore {
-          display: block;
-        }
-      }
+    &:hover {
+      border-color: rgba(white, 0.8);
     }
 
-    &:not(.restore) .actions .restore {
-      display: none;
+    .modlist-title {
+      display: block;
+      font-size: 1.1em;
     }
 
-    .thumbnail {
-      flex-shrink: 0;
-      width: 128px;
-      height: 128px;
+    .modlist-start {
+      display: block;
+      font-size: 0.9em;
+    }
+  }
+
+  .modlist-mods {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    column-gap: 24px;
+
+    .mod {
+      text-decoration: none;
+      border: 1px solid rgba(white, 0.3);
+      border-radius: 4px;
+      margin-bottom: 12px;
       overflow: hidden;
-      border-top-left-radius: inherit;
-      border-bottom-left-radius: inherit;
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-
-    .content {
-      width: 100%;
-      height: calc(100% - 24px);
-      padding: 12px 16px;
 
       display: flex;
-      flex-direction: column;
-      justify-content: start;
-      align-items: start;
+      flex-direction: row;
+      justify-content: left;
+      align-items: center;
 
-      .title {
-        font-size: 1.1em;
-        font-weight: 600;
-        max-height: 3em;
+      // repeat classname to take higher priority
+      &.deleted.deleted.deleted {
+        opacity: 0.2;
+
+        .actions {
+          justify-content: right;
+
+          :not(.restore) {
+            display: none;
+          }
+
+          .restore {
+            display: block;
+          }
+        }
+      }
+
+      &:not(.restore) .actions .restore {
+        display: none;
+      }
+
+      .thumbnail {
+        flex-shrink: 0;
+        width: 128px;
+        height: 128px;
         overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
+        border-top-left-radius: inherit;
+        border-bottom-left-radius: inherit;
 
-        padding-bottom: 2px;
-        margin-bottom: -2px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
 
-      .details {
-        margin-top: 8px;
-        font-size: 0.9em;
-      }
-
-      .spacer {
-        flex-grow: 1;
-      }
-
-      .actions {
+      .content {
         width: 100%;
-        font-size: 0.9em;
+        height: calc(100% - 24px);
+        padding: 12px 16px;
 
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: baseline;
+        flex-direction: column;
+        justify-content: start;
+        align-items: stretch;
 
-        label {
+        .title {
+          font-size: 1.1em;
+          font-weight: 600;
+          max-height: 3em;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+
+          padding-bottom: 2px;
+          margin-bottom: -2px;
+        }
+
+        .details {
+          margin-top: 8px;
+          font-size: 0.9em;
+        }
+
+        .spacer {
           flex-grow: 1;
-          display: block;
-          cursor: pointer;
+        }
 
-          input[type=checkbox] {
-            position: relative;
-            top: 2px;
-            margin-right: 2px;
+        .actions {
+          width: 100%;
+          font-size: 0.9em;
+
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: baseline;
+
+          label {
+            flex-grow: 1;
+            display: block;
+            cursor: pointer;
+
+            input[type=checkbox] {
+              position: relative;
+              top: 2px;
+              margin-right: 2px;
+            }
           }
+        }
+
+        .optional {
+          text-align: right;
+          color: #43b8fb;
         }
       }
     }
