add server management

--- a/app/assets/stylesheets/pages/modlists.scss
+++ b/app/assets/stylesheets/pages/modlists.scss
@@ -139,6 +139,11 @@
           text-align: right;
           color: #43b8fb;
         }
+
+        .server-only {
+          text-align: right;
+          color: #52f56d;
+        }
       }
     }
   }
