--- a/app/views/manage_server/index.html.erb
+++ b/app/views/manage_server/index.html.erb
@@ -86,10 +86,10 @@
             type="checkbox"
             checked
             data-manage-server-target="validate" />
-        Validate on start
+        Update/validate on start
       </label>
     </li>
   </ul>
 
-  <div class="server-log">live server log go here</div>
+  <div class="server-log" data-manage-server-target="logOutput"></div>
 </div>
