--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,11 @@
-welcome :)
+<p>
+  welcome :)
+</p>
+
+<p>
+  join the test discord server: <a href="https://discord.gg/Rtz9DxCHqh">https://discord.gg/Rtz9DxCHqh</a>
+</p>
+
+<p>
+  site permissions are based on discord roles
+</p>
